--- a/customer-maintainer/src/main/resources/application.properties
+++ b/customer-maintainer/src/main/resources/application.properties
@@ -1,2 +1,12 @@
-spring.data.mongodb.uri=mongodb://admin:${PASSWORD}@mongo
+#spring.data.mongodb.uri=mongodb://admin:123456
+#spring.data.mongodb.database=customer
+#spring.data.mongodb.username=admin
+#spring.data.mongodb.password=123456
+#spring.data.mongodb.port=27017
+
+#spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.username=root
+#spring.data.mongodb.password=root
 spring.data.mongodb.database=customer
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
